objects/User_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Boolean_Field__c</fullName>
        <businessOwnerUser>billnewss@mz.com</businessOwnerUser>
        <complianceGroup>HIPAA</complianceGroup>
        <defaultValue>false</defaultValue>
        <description>Test field for checkbox</description>
        <inlineHelpText>Here is the help text</inlineHelpText>
        <label>Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Field__c</fullName>
        <label>Picklist Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Source__c</fullName>
        <label>Registration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Registrations</relationshipLabel>
        <relationshipName>Related_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Field__c</fullName>
        <label>Text Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>User Registration</label>
    <nameField>
        <label>Example Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>StateParkValidation</fullName>
        <active>true</active>
        <description>Field value must be the name of a State Park in California</description>
        <errorConditionFormula>NOT(CONTAINS(&quot;Yosemite,Sequoia,Redwood,Tahoe&quot;, Text_Field__c))</errorConditionFormula>
        <errorMessage>Field value must be the name of a State Park in California</errorMessage>
    </validationRules>
</CustomObject>